Wed Apr  1 10:29:57 EST 2009  <baueran@gmail.com>

- src/alphabet.ml: new file
- src/extractalphabet.ml: new file
- src/nevertosymbols.ml: remove
- src/fsmcrossprod.ml, src/nevertofsm.ml: use alphabet.ml, added -a
  command line option for accepting external alphabet
- src/fsmcrossprod.ml, src/alphabet.ml, src/extractalphabet.ml:
  added additional output explaining arguments,
  added comments in the code
- NEWS, ltl2ba: update documentation

Sat Mar 14 10:53:31 EST 2009  <baueran@gmail.com>

- src/alphabet.ml, src/formulatosymbols.ml: new
- src/*.ml, src/Makefile: use new files

Tue Feb 17 09:41:44 EST 2009  <baueran@gmail.com>

- Makefile, NEWS, README: release clean-ups

Fri Jan 16 15:52:45 EST 2009  <baueran@gmail.com>

- src/putils.ml:sigma_filter: fix bug that would corrupt output when
  the proposition in question was a substring of another proposition
  in sigma
- src/putils.ml:act_contains: new

Fri Jan 16 12:52:48 EST 2009  <baueran@gmail.com>

- src/*.ml: rewrote almost every function slightly to improve performance
            (too many little changes to remember or mention - sorry!)
- src/Makefile: call ocamlopt instead of ocamlc

Wed Jan 14 10:46:23 EST 2009  <baueran@gmail.com>

- src/mutils.ml:remove_doubles: change structure of recursion
- src/nevertofsm.ml:unfold_*: change structure of recursion

Fri Dec 26 04:24:06 EST 2008  <baueran@gmail.com>

- src/minimise.ml: make marked_states recursive

Thu Dec 25 22:51:01 EST 2008  <baueran@gmail.com>

- src/minimise.ml: fix bug in find_new_marked: add (s1, s2) to marked
  states rather than the newly found state pairs
- ChangeLog, NEWS: reflect changes

Thu Dec 25 01:29:08 EST 2008  <baueran@gmail.com>

- Makefile, ChangeLog, NEWS: add release notes
- src/minimise.ml: add inline documentation

Tue Dec 23 06:19:03 EST 2008  <baueran@gmail.com>

- src/minimise.ml: new
- src/mutils.ml: add remove_doubles and explanation
- src/gutils.ml: add explanation
- src/putils.ml: add explanation